--- a/src/Login/Login.Style.css
+++ b/src/Login/Login.Style.css
@@ -1,15 +1,4 @@
-.grey {
-  color: #696f79;
-}
-
-.m-10 {
-  margin-top: 10px;
-}
-.m-25 {
-  margin-top: 20px;
-}
-
-.RegisterContainer {
+.LoginContainer {
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -18,7 +7,7 @@
   background-color: #202227;
   box-shadow: 0px 0px 15px 50000px #202227;
 }
-.RegisterSideContainer {
+.LoginSideContainer {
   width: 420px;
   display: flex;
   justify-content: center;
@@ -30,7 +19,7 @@
   justify-content: center;
   align-items: center;
 }
-.RegisterWrapper {
+.LoginWrapper {
   height: 89vh;
   display: flex;
   align-items: flex-start;
@@ -46,6 +35,7 @@
 #LOGO {
   height: 35px;
 }
+
 .input {
   width: 100%;
   padding: 12px 20px;
@@ -63,25 +53,16 @@
 .input:focus {
   border: 1px solid #8692a6;
 }
-.CheckboxContainer {
-  display: flex;
-  gap: 15px;
-}
 
-#Checkbox:focus {
-  border: none;
-}
-.RegisterButton {
+.LoginButton {
   width: 100%;
   padding: 14px 20px;
-  /* background-color: #1565d8; */
   border: none;
   border-radius: 5px;
   color: white;
   font-weight: 600;
   font-size: 14px;
 }
-
 @media only screen and (max-width: 1010px) {
   .ImageSideContainer {
     display: none;
@@ -92,9 +73,4 @@
   .ImageSideContainer {
     display: none;
   }
-}
-
-#LoadingGif {
-  height: 25px;
-  width: 25px;
 }
